fixed some deprecations